kubernetes/multi-project/word-picker-c.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: word-picker-c
  namespace: word-picker-bc-lz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: word-picker
      letter: c
  template: 
    metadata:
      labels:
        app: word-picker
        letter: c
    spec:
      containers:
      - name: word-picker
        image: bullit25/word-picker:v2.1
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: options-config-map
          mountPath: /code/config
      volumes:
      - name: options-config-map
        configMap:
          name: word-picker-options-c
