kubernetes/multi-project/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-picker-a
  namespace: word-picker-a-lz
spec:
  type: ClusterIP
  selector:
     app: word-picker
     letter: a
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
