kubernetes/multi-project/service-bc.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-picker-b
  namespace: word-picker-bc-lz
spec:
  type: ClusterIP
  selector:
     app: word-picker
     letter: b
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: word-picker-c
  namespace: word-picker-bc-lz
spec:
  type: ClusterIP
  selector:
     app: word-picker
     letter: c
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
---
#This service is currently not functioning properly,
#because of the b and c network policies
apiVersion: v1
kind: Service
metadata:
  name: word-picker-bc
  namespace: word-picker-bc-lz
spec:
  type: ClusterIP
  selector:
     app: word-picker
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
