kubernetes/multi-project/route-a-https.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: word-picker-a-https
  namespace: word-picker-a-lz
spec:
  host: word-picker-a-https-word-picker-a-lz.apps.bruno.ocp-training-gcp.yct.hu
  port:
    targetPort: 5000
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDWzCCAkMCFCAx79gZJVMl3XX4kIqtP1oQCLhCMA0GCSqGSIb3DQEBCwUAMGox
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDAEFGqq8kYUkyP
[...]
      waV8TvlDcCD9suD99eBbzm4=
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: word-picker-a
    weight: 100
