kubernetes/multi-project/route-a.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: word-picker-a
    namespace: word-picker-a-lz
spec:
  host: word-picker-a-word-picker-a-lz.apps.bruno.ocp-training-gcp.yct.hu
  port:
    targetPort: 5000
  to:
    kind: Service
    name: word-picker-a
    weight: 100
