kubernetes/multi-project/route-b.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: word-picker-b
    namespace: word-picker-bc-lz
spec:
  host: word-picker-b-lz.apps.bruno.ocp-training-gcp.yct.hu
  port:
    targetPort: 5000
  to:
    kind: Service
    name: word-picker-b
    weight: 100
